Implement delete properly and fix multiple bugs
